--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
   <p>这是我的第一个网站</p>
 <a href="https://bilibili.com" target="_blank">bilibili跳转</a>
+
+<img src="https://s1.imagehub.cc/images/2024/04/03/1cecf59adc375c45ed2faea17a2c2322.jpeg" alt="1cecf59adc375c45ed2faea17a2c2322.jpeg" border="0" 
+width="350">
 </body>
 </html>
