--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>第二</title>
+  <title>跳转菜单</title>
+  <style>
+  
+    h1 {
+      text-align: center;
+    }
+    
+    h2 {
+      text-align: center;
+    }
+    
+    .bilibili {
+      color: pink;
+    }
+  </style>
 </head>
 <body>
-  <p>这是我的第一个网站</p>
-<a href="https://bilibili.com" target="_blank">bilibili跳转</a>
+  <h1>这是我的第一个网站</h1>
+  <h2>跳转菜单</h2>
+  
+<a class="bilibili" href="https://bilibili.com" target="_blank"><h2>bilibili跳转</h2></a>
 
-<img src="https://s1.imagehub.cc/images/2024/04/03/1cecf59adc375c45ed2faea17a2c2322.jpeg" alt="1cecf59adc375c45ed2faea17a2c2322.jpeg" border="0" 
-width="350">
+<br>
+
+<a class="baidu" href="https://baidu.com" target="_blank"><h2>百度跳转</h2></a>
+
+<br>
+
+
+
+
+
 </body>
 </html>
